Responsive break points

--- a/app/Resources/views/overlay.html.twig
+++ b/app/Resources/views/overlay.html.twig
@@ -5,7 +5,7 @@
                 Send new request
                 <button class="button-close" id="sendRequestOverClose" >×</button>
             </div>
-            <div id="sendRequestContent">
+            <div class="edit-request-content" id="sendRequestContent">
                 <div class="load-content"  id="loadingGif" >
                 <span class="bubble"></span>
                 </div>
@@ -22,7 +22,7 @@
                 Edit request
                 <button class="button-close" id="editRequestOverClose" >×</button>
             </div>
-            <div id="editRequestContent">
+            <div class="edit-request-content" id="editRequestContent">
                 <div class="load-content"  id="loadingGif" >
                 <span class="bubble"></span>
                 </div>
