--- a/src/AppBundle/Resources/public/css/global.sass
+++ b/src/AppBundle/Resources/public/css/global.sass
@@ -57,9 +57,9 @@ img
 
 div.content
 	width: 100%
-	max-width: 1260px
+	max-width: 1200px
 	margin: 0 auto
-	padding: 0 30px
+	padding: 0
 	display: block
 
 .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12
