--- a/src/PP/RequestBundle/Resources/views/Request/addRequestForm.html.twig
+++ b/src/PP/RequestBundle/Resources/views/Request/addRequestForm.html.twig
@@ -4,11 +4,13 @@
         <div class="box-comp">                                         
             {{form_row(form.title, {'attr':{'pattern': ".{3,90}"}})}}
             {{form_row(form.request, {'attr': {'rows': '15', 'minlength': "10"}})}}
-            <div class="col-6">
-                {{form_row(form.category)}}
-            </div>
-            <div class="col-6">
-                {{form_row(form.tagsStr)}} 
+            <div class="comp-details">
+                <div class="box-details-item col-6">
+                    {{form_row(form.category)}}
+                </div>
+                <div class="box-details-item col-6">
+                    {{form_row(form.tagsStr)}} 
+                </div>
             </div>
         </div>
         <div class="box-bottom">
