--- a/src/PP/HeaderBundle/Resources/views/header/header.html.twig
+++ b/src/PP/HeaderBundle/Resources/views/header/header.html.twig
@@ -12,7 +12,9 @@
             <div class="header-actions-buttons">
                 <ul class="connected">
                     {# new request button #}
-                    <li><a class="button red stopPropagation" href="" title="Send your request" ng-click="header.showNewRequestForm()">Send your request</a></li>
+                    <li class="header-actions-new">
+                        <a class="button red stopPropagation" href="" title="Send your request" ng-click="header.showNewRequestForm()">Send your request</a>
+                    </li>
                 </ul>
             </div>
             <nav class="menu">
